More UI improvements.

--- a/src/app/chh-web-components/chh-app-insurance-coordinator-inquiry/chh-app-insurance-coordinator-inquiry.component.html
+++ b/src/app/chh-web-components/chh-app-insurance-coordinator-inquiry/chh-app-insurance-coordinator-inquiry.component.html
@@ -1,4 +1,4 @@
-<ion-item>
+<ion-item lines="none">
   <ion-label  class="ion-text-wrap">Are you an Insurance Coordinator?</ion-label> 
   <!--ion-checkbox color="mango" checked="false" (ionChange)="viewtoggle($event)"></ion-checkbox-->
   </ion-item>
