--- a/src/app/pages/in-patient-patient-information/chh-app-icdrvs/chh-app-icdrvs.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-icdrvs/chh-app-icdrvs.page.html
@@ -52,7 +52,7 @@
           </ion-item>
             -->
 
-          <ion-item>
+          <ion-item lines="none">
             <ion-label class="ion-text-wrap"
               >Are you an Insurance Coordinator?</ion-label
             >
