--- a/src/app/chh-web-components/chh-app-is-patient-seen/chh-app-is-patient-seen.component.html
+++ b/src/app/chh-web-components/chh-app-is-patient-seen/chh-app-is-patient-seen.component.html
@@ -1,4 +1,4 @@
-<ion-item>
+<ion-item lines="none">
   <ion-label class="ion-text-wrap">Have you seen this Patient?</ion-label>
   <!--ion-checkbox color="mango" checked="false" (ionChange)="viewtoggle($event)"></ion-checkbox-->
 </ion-item>
