--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -4,8 +4,8 @@
       Review
     </ion-title>
     <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
-      <ion-button routerLink="{{routerLinkBack}}" routerDirection="backwards" color="chh-css-primary2">Close&nbsp;
-        <ion-icon name="close-outline"></ion-icon>
+      <ion-button routerLink="{{routerLinkBack}}" routerDirection="backwards" color="chh-css-primary2">Back
+        <ion-icon slot="start" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -71,10 +71,10 @@
         <ion-col size="5">Admission Date:</ion-col>
         <ion-col size="7">{{dateAdmitted}}</ion-col>
       </ion-row>
-      <ion-row>
+      <!-- <ion-row>
         <ion-col size="5">Managed this patient for:</ion-col>
         <ion-col size="7">{{daysManaged}} {{day}}</ion-col>
-      </ion-row>
+      </ion-row> -->
     </ion-grid>
   </ion-item>
   <ion-item class="ion-no-margin" *ngIf="moreOrLess">
