Fix fine print. Landing page adjustments.

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -131,7 +131,7 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
+          >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -731,7 +731,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
+        >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
