--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -12,7 +12,7 @@
                 alt="Chong Hua Hospital"
               />
             </div>
-            <h1><b>Welcome aboard, Dok!</b></h1>
+            <h1 style="margin-bottom: 0"><b>Welcome aboard, Dok!</b></h1>
             <img
               src="assets/img/world-health-day-rafiki.svg"
               alt="frontliners"
@@ -29,11 +29,11 @@
                 autoplay
               ></lottie-player> -->
             <!-- </div> -->
-            <h3>
+            <h4>
               We <b>thank you</b> for your courage and service. We truly
               appreciate it!
-            </h3>
-            <p>Swipe left to see what we've built for you.</p>
+            </h4>
+            <p class="fontSize-12">Swipe left to see what we've built for you.</p>
             <ion-button
               id="first-slide-button-right"
               fill="clear"
