--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -131,8 +131,7 @@
       <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage applies.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> (+ VAT)
-        - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
       <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess
