Shorten appreciation message on landing page.

--- a/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
+++ b/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
@@ -15,7 +15,7 @@
       ></lottie-player> -->
     </div>
     <h3>
-      We <b>thank you</b> for your courage and service. We truly appreciate it!
+      We <b>thank you</b> for your courage and service. We appreciate it!
     </h3>
     <p>Swipe left to see what we've built for you.</p>
   </ion-slide>
