--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -30,8 +30,7 @@
               ></lottie-player> -->
             <!-- </div> -->
             <h4>
-              We <b>thank you</b> for your courage and service. We truly
-              appreciate it!
+              We <b>thank you</b> for your courage and service. We appreciate it!
             </h4>
             <p class="fontSize-12">Swipe left to see what we've built for you.</p>
             <ion-button
