--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -543,10 +543,10 @@ ______             _     _                       ______             _
                 <ion-col size="5">Admission Date:</ion-col>
                 <ion-col size="7">{{dateAdmitted}}</ion-col>
               </ion-row>
-              <ion-row>
+              <!-- <ion-row>
                 <ion-col size="5">Managed this patient for:</ion-col>
                 <ion-col size="7">{{daysManaged}} {{day}}</ion-col>
-              </ion-row>
+              </ion-row> -->
             </ion-grid>
           </ion-item>
 
