updated Back on pages

--- a/src/app/pages/case-rates/case-rates.page.html
+++ b/src/app/pages/case-rates/case-rates.page.html
@@ -1,4 +1,20 @@
 <ion-header mode="md" class="ion-no-border">
+
+  <ion-toolbar color="mango">
+    <span 
+      class="padding-left-10" 
+      (click)="dismiss()" 
+      routerDirection="backwards"
+      color="chh-css-primary2"        
+      >
+      <ion-icon 
+        name="chevron-back-outline" 
+        class="my-icon vcenter">
+      </ion-icon>
+    </span>
+    <span  class="padding-left-30 font-weight-500 font-size-20"> Case Rates {{case}}   </span>
+  </ion-toolbar>
+<!-- 
   <ion-toolbar color="mango">
     <ion-title> Case Rates {{case}} </ion-title>
     <ion-buttons
@@ -9,7 +25,7 @@
         >Close&nbsp; <ion-icon name="close-outline"></ion-icon
       ></ion-button>
     </ion-buttons>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 <!-- <app-chh-app-desktop-navigation *ngIf="isDesktop"></app-chh-app-desktop-navigation> -->
 <ion-content *ngIf="ccCase=='first'">
