--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -1,4 +1,34 @@
 <ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
+
+
+
+
+
+
+  <ion-toolbar color="mango">
+    <span 
+      class="padding-left-10" 
+      routerLink="{{routerLinkBack}}"
+      routerDirection="backwards"
+      color="chh-css-primary2"        
+      >
+      <ion-icon 
+        name="chevron-back-outline" 
+        class="my-icon vcenter">
+      </ion-icon>
+    </span>
+    <span  class="padding-left-30 font-weight-500 font-size-20"> {{headerMethod}}  </span>
+  </ion-toolbar>
+
+
+
+
+
+
+
+
+
+<!-- 
   <ion-toolbar color="mango">
     <ion-title> {{headerMethod}} </ion-title>
     <ion-buttons
@@ -13,7 +43,7 @@
         <ion-icon slot="start" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 
 <ion-content *ngIf="!isDesktop" id="content">
