--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -9,6 +9,32 @@ ___  ___        _      _  _              _   _                   _
     -->
 <ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
   <ion-toolbar color="mango">
+    <span 
+      class="padding-left-10"         
+      routerLink="{{routerLinkBack}}"
+      routerDirection="backwards"
+      color="chh-css-primary2"
+      *ngIf="btnclose">
+      <ion-icon 
+        name="chevron-back-outline" 
+        class="my-icon vcenter">
+      </ion-icon>
+    </span>
+    <span 
+      class="padding-left-10"         
+      routerDirection="backwards"
+      color="chh-css-primary2"
+      *ngIf="!btnclose"
+      (click)="modifyProfFeeClose()">
+      <ion-icon 
+        name="chevron-back-outline" 
+        class="my-icon vcenter">
+      </ion-icon>
+    </span>
+
+    <span  class="padding-left-30 font-weight-500 font-size-20"> Professional Fee </span>
+  </ion-toolbar>
+  <!-- <ion-toolbar color="mango">
     <ion-title> Professional Fee </ion-title>
     <ion-buttons
       slot="end"
@@ -32,7 +58,7 @@ ___  ___        _      _  _              _   _                   _
         <ion-icon slot="start" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 
 <!--
