--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -32,7 +32,29 @@ ___  ___        _      _  _
 -->
 
 <ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop"> 
+
+
   <ion-toolbar color="mango">
+    <span 
+      class="padding-left-10"         
+      routerLink="/menu/in-patients/" routerDirection="backward"
+      color="chh-css-primary2"
+      >
+      <ion-icon 
+        name="chevron-back-outline" 
+        class="my-icon vcenter">
+      </ion-icon>
+    </span>
+
+
+    <span  class="padding-left-30 font-weight-500 font-size-20"> Patient Information </span>
+  </ion-toolbar>
+
+
+
+
+
+  <!-- <ion-toolbar color="mango">
     <ion-title>
       Patient Information
     </ion-title>
@@ -44,7 +66,7 @@ ___  ___        _      _  _
         >Close&nbsp; <ion-icon name="close-outline"></ion-icon
       ></ion-button>
     </ion-buttons>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
   <ion-content *ngIf="!isDesktop">
     <app-chh-app-patient-header
