Update on-boarding page. Increment patch ver num.

--- a/src/app/chh-web-components/chh-app-slides/chh-app-slides.component.html
+++ b/src/app/chh-web-components/chh-app-slides/chh-app-slides.component.html
@@ -45,8 +45,7 @@
       autoplay
     ></lottie-player>
     <p>
-      When your patients booked an appointment schedule online, you can now view
-      a list of patients that are expected to visit your clinic.
+      Whenever patients book an appointment schedule online, you can view the list of patients expected to visit your clinic.
     </p>
   </ion-slide>
   <ion-slide>
