--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -30,9 +30,12 @@
               ></lottie-player> -->
             <!-- </div> -->
             <h4>
-              We <b>thank you</b> for your courage and service. We appreciate it!
+              We <b>thank you</b> for your courage and service. We appreciate
+              it!
             </h4>
-            <p class="fontSize-12">Swipe left to see what we've built for you.</p>
+            <p class="fontSize-12">
+              Swipe left to see what we've built for you.
+            </p>
             <ion-button
               id="first-slide-button-right"
               fill="clear"
@@ -101,9 +104,8 @@
               ></lottie-player>
             </div> -->
             <p>
-              When your patients booked an appointment schedule online, you can
-              now view a list of patients that are expected to visit your
-              clinic.
+              Whenever patients book an appointment schedule online, you can
+              view the list of patients expected to visit your clinic.
             </p>
             <ion-button
               id="third-slide-button-left"
