--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -2,7 +2,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size-lg="6" size-md="6" offset-md="3 " size-sm="6" size="12">
-        <ion-slides pager="{{!isDesktop}}" #theSlides [options]="slideOpts">
+        <ion-slides pager="{{!isDesktop}}" #theSlides [options]="slideOpts" class="my-custom-slider ">
           <ion-slide id="slide1">
             <!-- <app-logo></app-logo> -->
             <div class="logoContainer">
