--- a/src/global.scss
+++ b/src/global.scss
@@ -446,8 +446,8 @@ a {
 
 
 
-html {
-  min-height: calc(100% + env(safe-area-inset-top));
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+// html {
+//   min-height: calc(100% + env(safe-area-inset-top));
+//   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 
-}
+// }
