--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -3,9 +3,9 @@
     <ion-row>
       <ion-col size-lg="6" size-md="6" offset-md="3 " size-sm="6" size="12" class="my-custom-slider ">
         <ion-slides pager="{{!isDesktop}}" #theSlides [options]="slideOpts" >
-          <ion-slide id="slide1">
+          <ion-slide id="slide1" >
             <!-- <app-logo></app-logo> -->
-            <div class="logoContainer">
+            <div class="logoContainer" style="padding-top:5px">
               <img
                 src="assets/img/LOGOMARK.png"
                 class="flexibleImg"
