--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -70,7 +70,7 @@
                 ></b
               >). <br />
               <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}}
-              {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}
+              test 1.0
             </p>
           </ion-item>
           <ion-item lines="none" class="fontSize-12">
