--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -209,10 +209,10 @@ ______             _     _                        _   _                   _
           applies.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> {{withVat}} will be collected from your patient.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1 | number}}</b> (+ VAT)</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1 | number}}</b> {{withVat}}</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
         <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
@@ -230,10 +230,10 @@ ______             _     _                        _   _                   _
     <ul *ngIf="payvenueN == 'H' && data1 > 0">
   
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> {{withVat}} will be collected from your patient.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> {{withVat}} + PhilHealth</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
         <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
