added :active on button for button press slight animation

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -510,6 +510,7 @@ ______                         ______   _   _   _____   _____
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4">
             <ion-button
+            class="buttonActive"
               color="mango"
               size="default"
               expand="block"
@@ -1107,6 +1108,7 @@ _____   _
 
 
               <ion-button
+              class="buttonActive"
                 color="mango"
                 size="default"
                 expand="block"
