--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -167,7 +167,9 @@ ___  ___        _      _  _
         <ion-row >
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4">
+
             <ion-button
+            class="buttonActive"
               color="mango"
               size="default"
               expand="block"
@@ -268,9 +270,8 @@ ______          _    _
    
             <ion-list>
 
-
             <ion-button
-            color="mango"
+            class="buttonActive"
               size="default"
               expand="block"
               shape="round"
