--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -224,7 +224,7 @@
 
 <ion-footer *ngIf="isDesktop">
   <ion-toolbar>
-    <ion-button *ngIf="isDesktop" color="mango" size="default" expand="block" shape="round" (click)="postSummary()">
+    <ion-button *ngIf="isDesktop" color="mango" class="buttonActive" size="default" expand="block" shape="round" (click)="checkIfPosted()">
       Submit</ion-button>
   </ion-toolbar>
 </ion-footer>
@@ -246,7 +246,7 @@
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4">
 
-            <ion-button color="mango" size="default" expand="block" shape="round" (click)="postSummary()"
+            <ion-button color="mango" size="default" expand="block" shape="round" class="buttonActive" (click)="postSummary()"
               [disabled]="disableSubmit">Submit</ion-button>
           </ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
