--- a/src/global.scss
+++ b/src/global.scss
@@ -445,9 +445,12 @@ a {
 
 
 
-
+.buttonActive:active {
+  border: 3px solid;
+ // box-shadow: 1px 1px red;
+}
 // html {
 //   min-height: calc(100% + env(safe-area-inset-top));
 //   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 
-// }
+// }rgb(245, 0, 0)
