--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -224,7 +224,7 @@
 
 <ion-footer *ngIf="isDesktop">
   <ion-toolbar>
-    <ion-button *ngIf="isDesktop" color="mango" class="buttonActive" size="default" expand="block" shape="round" (click)="checkIfPosted()">
+    <ion-button *ngIf="isDesktop" color="mango" class="buttonActive" size="default" expand="block" shape="round" (click)="postSummary()">
       Submit</ion-button>
   </ion-toolbar>
 </ion-footer>
