--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -12,12 +12,13 @@
       routerDirection="backwards"
       color="chh-css-primary2"        
       >
-      <ion-icon 
+      <!-- <ion-icon 
         name="chevron-back-outline" 
         class="my-icon vcenter">
-      </ion-icon>
+      </ion-icon> -->
+      <ion-icon name="arrow-back-outline"  class="my-icon vcenter"></ion-icon>
     </span>
-    <span  class="padding-left-30 font-weight-500 font-size-20"> {{headerMethod}}  </span>
+    <span  class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;{{headerMethod}}  </span>
   </ion-toolbar>
 
 
