--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -40,14 +40,15 @@ ___  ___        _      _  _
       routerLink="/menu/in-patients/" routerDirection="backward"
       color="chh-css-primary2"
       >
-      <ion-icon 
+      <ion-icon name="arrow-back-outline"  class="my-icon vcenter"></ion-icon>
+      <!--ion-icon 
         name="chevron-back-outline" 
         class="my-icon vcenter">
-      </ion-icon>
+      </ion-icon-->
     </span>
 
 
-    <span  class="padding-left-30 font-weight-500 font-size-20"> Patient Information </span>
+    <span  class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Patient Information </span>
   </ion-toolbar>
 
 
