Removed appointments and added news feed

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,10 +8,20 @@
       <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label class="tab-font-family">{{this.constants.MENU__VALUE__IN_PATIENTS}}</ion-label>
     </ion-tab-button>
-    <ion-tab-button id="button-appointments" tab="appointments">
+
+    <!--ion-tab-button id="button-appointments" tab="appointments">
       <ion-icon name="calendar-outline"></ion-icon>
       <ion-label class="tab-font-family">{{this.constants.MENU__VALUE__APPOINTMENTS}}</ion-label>
+    </ion-tab-button-->
+    <ion-tab-button id="button-appointments" tab="news-feed">
+      <ion-icon name="newspaper-outline"></ion-icon>
+      <ion-label class="tab-font-family">News Feed</ion-label>
     </ion-tab-button>
+
+
+    
+
+
     <ion-tab-button id="button-settings" tab="settings">
       <ion-icon name="settings-outline"></ion-icon>
       <ion-label class="tab-font-family">{{this.constants.MENU__VALUE__SETTINGS}}</ion-label>
@@ -48,7 +58,7 @@
             >
               {{this.constants.MENU__VALUE__IN_PATIENTS}}
             </ion-button>
-            <ion-button
+            <!--ion-button
               id="button-appointments"
               fill="clear"
               routerLink="/menu/appointments"
@@ -57,7 +67,23 @@
               class="link"
             >
               {{this.constants.MENU__VALUE__APPOINTMENTS}}
+            </ion-button-->
+
+
+            <ion-button
+              id="button-appointments"
+              fill="clear"
+              routerLink="/menu/news-feed"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+            >
+              News Feed
             </ion-button>
+
+
+
+            
             <ion-button
               id="button-settings"
               fill="clear"
