--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -12,39 +12,41 @@
 
 </ion-header>
 <ion-content>
-  <ion-card>
-    <img src="assets/img/red-8-1.jpg" />
-    <ion-card-header>
-      <ion-card-title>RED 8</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      We were fortunate to have the renowned Dr. Iris Isip-Tan to share insights in keeping up with the challenges in medical practice in this time of pandemic.
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <img src="assets/img/red-8-2.jpg" />
-    <ion-card-header>
-      <ion-card-title>RED 8</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      A Hepatitis B masterclass, with updates and review of current guidelines, by our eminent Hepatologist, Dr. Jenny Limquiaco
-    </ion-card-content>
-  </ion-card>
-
-
-  <ion-card>
-    <img src="assets/img/red-8-3.jpg" />
-    <ion-card-header>
-      <ion-card-title>RED 8</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      We’ve reached the last leg of our journey. Join us today as we conclude our 8th Postgraduate Course in Internal Medicine!
-      Don’t forget, the iPAD AIR 4 will be raffled off at the end of the day.
-      <a href="https://natrapharm.zoom.us/webinar/register/WN_2pcB7YpUScGzWd2QJ_vCVg?fbclid=IwAR01eUmlsfIREH1ND6jsnZqUR6zaWZG6JqlGDw8oiuJGvhVbyXzy0O5ILqs" target="_BLANK">Register Here</a>
-    </ion-card-content>
-  </ion-card>
-
-
+  <ion-grid class="ion-no-padding">
+    <ion-row>
+      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+        <ion-card>
+          <img src="assets/img/red-8-1.jpg" />
+          <ion-card-header>
+            <ion-card-title>RED 8</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            We were fortunate to have the renowned Dr. Iris Isip-Tan to share insights in keeping up with the challenges in medical practice in this time of pandemic.
+          </ion-card-content>
+        </ion-card>
+        <ion-card>
+          <img src="assets/img/red-8-2.jpg" />
+          <ion-card-header>
+            <ion-card-title>RED 8</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            A Hepatitis B masterclass, with updates and review of current guidelines, by our eminent Hepatologist, Dr. Jenny Limquiaco
+          </ion-card-content>
+        </ion-card>
+        <ion-card>
+          <img src="assets/img/red-8-3.jpg" />
+          <ion-card-header>
+            <ion-card-title>RED 8</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            We’ve reached the last leg of our journey. Join us today as we conclude our 8th Postgraduate Course in Internal Medicine!<br />
+            Don’t forget, the iPAD AIR 4 will be raffled off at the end of the day.
+            <a href="https://natrapharm.zoom.us/webinar/register/WN_2pcB7YpUScGzWd2QJ_vCVg?fbclid=IwAR01eUmlsfIREH1ND6jsnZqUR6zaWZG6JqlGDw8oiuJGvhVbyXzy0O5ILqs" target="_BLANK">Register Here</a>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>        
+  </ion-grid>
 
 
 
