--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -140,7 +140,14 @@
                 <ion-icon  name="eye-off-outline" [name]="getName3()"item-right  (click)="showPassword2()"  class="rectangle3"></ion-icon>
               </ion-item>
 
-  
+              <ion-item lines="none" >
+                <ion-label  for="oldpassword"  ><b>Old Password</b></ion-label><br />
+              </ion-item>
+              <ion-item lines="none">
+                <ion-input id="confirmPassword" formControlName="confirmPassword" type="password" class="form-control"
+                [ngClass]="frmSignup.controls['oldPassword'].invalid ? 'is-invalid' : ''"[type]="getType4()"  [(ngModel)]="OldPassword" placeholder = "Confirm Password"></ion-input>
+                <ion-icon  name="eye-off-outline" [name]="getName4()"item-right  (click)="showPassword3()"  class="rectangle3"></ion-icon>
+              </ion-item>
   
           </div>
 
