made new case rate component

--- a/src/app/chh-web-components/chh-app-caserates/chh-app-caserates.component.html
+++ b/src/app/chh-web-components/chh-app-caserates/chh-app-caserates.component.html
@@ -47,7 +47,7 @@
         <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
         <ion-badge
           ><h3 class="ion-text-wrap">
-            <b>PF : {{x.case_pf }}</b>
+            <b>PF : {{x.case_pf | number}}</b>
           </h3></ion-badge
         >
       </ion-label>
@@ -135,7 +135,7 @@
         <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
         <ion-badge
           ><h3 class="ion-text-wrap">
-            <b>PF : {{x.case_pf }}</b>
+            <b>PF : {{x.case_pf | number}}</b>
           </h3></ion-badge
         >
       </ion-label>
@@ -204,7 +204,7 @@
         <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
         <ion-badge
           ><h3 class="ion-text-wrap">
-            <b>PF : {{x.case_pf }}</b>
+            <b>PF : {{x.case_pf | number}}</b>
           </h3></ion-badge
         >
       </ion-label>
