removed Get User settings, Removed Console logs

--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -85,7 +85,7 @@ ___  ___        _      _  _
     </app-chh-app-admitting-diagnosis>
    
     <app-chh-app-final-diagnosis
-      [data]="data"
+      [data]="admissionstatus"
       [finalDiagnosis]="finalDiagnosis"
       [limit]="limit"
       [truncating]="truncating"
