removed test DB

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -45,11 +45,11 @@
                 class="rectangle"
               ></ion-icon>
             </ion-item>
-            <ion-item lines="none">
+            <!--ion-item lines="none">
               <ion-label>Test DB</ion-label>
               <ion-checkbox color="mango" [(ngModel)]="testDB"   (ngModelChange)="testdbalert()">
               </ion-checkbox>
-            </ion-item>
+            </ion-item-->
             <div class="ion-margin-vertical ion-text-right">
               <ion-button
                 expand="block"
